# moab-balance

./: .gitignore  NOTICE  README.md  install.sh  pyproject.toml
firmware/: README.md  flash-hat.sh  v3.bin.sha256
image/: .gitignore  README.md  build.sh  config
image/stage-moab/: prerun.sh
image/stage-moab/00-install-packages/: 00-packages
image/stage-moab/01-install-moab/: 00-run.sh  01-run-chroot.sh
moab_balance/: __init__.py  __main__.py  balance.py  camera.py  config.py  controller.py  hat.py  kinematics.py  vision.py
systemd/: moab-balance.service  moab-hat-flash.service
